--- a/cityguessr.client/package.json
+++ b/cityguessr.client/package.json
@@ -21,7 +21,6 @@
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
-    "@angular/youtube-player": "^15.2.9",
     "@types/leaflet": "^1.9.12",
     "jest-editor-support": "*",
     "leaflet": "^1.9.4",
@@ -35,6 +34,7 @@
     "@angular/cli": "~15.1.1",
     "@angular/compiler-cli": "^15.1.0",
     "@types/jasmine": "~4.3.0",
+    "@types/youtube": "^0.0.50",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
