--- a/cityguessr.client/package.json
+++ b/cityguessr.client/package.json
@@ -27,6 +27,7 @@
     "run-script-os": "*",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "uuid": "^11.0.0",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
